--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sayadev.finalproject.MainActivity">
+    tools:context="com.sayadev.finalproject.MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/appOne"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/appOne" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/appTwo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/appTwo" />
+
+    <Button
+        android:id="@+id/appThree"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/appThree" />
+
+    <Button
+        android:id="@+id/appFour"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/appFour" />
+</LinearLayout>
