--- a/app/src/main/res/layout/activity_kitchen_main.xml
+++ b/app/src/main/res/layout/activity_kitchen_main.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.sayadev.finalproject.kitchen.KitchenMainActivity">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_device_fab"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="#fff"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp" />
+
 </android.support.constraint.ConstraintLayout>
