--- a/app/src/main/res/layout/activity_kitchen_main.xml
+++ b/app/src/main/res/layout/activity_kitchen_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.sayadev.finalproject.kitchen.KitchenMainActivity">
 
+    <ListView
+        android:id="@+id/device_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="parent" >
+    </ListView>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_device_fab"
         android:src="@android:drawable/ic_input_add"
