--- a/app/src/main/res/layout/activity_lamps.xml
+++ b/app/src/main/res/layout/activity_lamps.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <ImageView
+        android:id="@+id/lampsImage"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/blind" />
+
+    <TextView
+        android:id="@+id/lampsText"
+        android:layout_width="match_parent"
+        android:layout_height="200px"
+        android:gravity="center_vertical"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="24dp" />
+
+    <Button
+        android:id="@+id/switchLamp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TURN LAMP ON" />
 
 </LinearLayout>
