--- a/app/src/main/res/values/strings_kitchen.xml
+++ b/app/src/main/res/values/strings_kitchen.xml
@@ -1,4 +1,8 @@
 <resources>
+    <string name="kitchen_show_device_title">Device Info</string>
+    <string name="kitchen_show_device_name">Name</string>
+    <string name="kitchen_show_device_model">Model</string>
+    <string name="kitchen_show_device_delete">Delete Device</string>
     <string name="kitchen_add_device_title">Add Device</string>
     <string name="kitchen_add_device_name">Enter Device Name</string>
     <string name="kitchen_add_device_model">Enter Device Model</string>
