Added check for entered name if no name toast is displayed

--- a/app/src/main/res/layout/autoitemrow.xml
+++ b/app/src/main/res/layout/autoitemrow.xml
@@ -6,6 +6,5 @@
     <TextView
         android:id="@+id/nameRow"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
