--- a/app/src/main/res/layout/activity_garage.xml
+++ b/app/src/main/res/layout/activity_garage.xml
@@ -6,13 +6,13 @@
 
 
     <ImageView
-        android:id="@+id/houseItemImage"
+        android:id="@+id/garageImage"
         android:layout_height="75dp"
         android:layout_width="match_parent"
         app:srcCompat="@drawable/blind" />
 
     <TextView
-        android:id="@+id/houseItemText"
+        android:id="@+id/garageText"
         android:layout_height="100dp"
         android:layout_width="match_parent"
         android:textAlignment="center"
