--- a/app/src/main/res/layout/activity_temprature_outside.xml
+++ b/app/src/main/res/layout/activity_temprature_outside.xml
@@ -6,19 +6,23 @@
 
 
     <ImageView
-        android:id="@+id/houseItemImage"
-        android:layout_height="75dp"
+        android:id="@+id/tempOutImage"
         android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/blind" />
 
     <TextView
-        android:id="@+id/houseItemText"
-        android:layout_height="100dp"
+        android:id="@+id/tempOutTitle"
         android:layout_width="match_parent"
-        android:textAlignment="center"
+        android:layout_height="200px"
         android:gravity="center_vertical"
-        android:textSize="24dp"
-        android:text="TextView"/>
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="24dp" />
+
+
+
+
 
 
 </LinearLayout>
