--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sayadev.finalproject.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.sayadev.finalproject.MainActivity">
 
-    <Button
-        android:id="@+id/appOne"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/appOne" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <Button
-        android:id="@+id/appTwo"
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/appTwo" />
+        android:layout_height="100dp"
+        android:textSize="24dp"
+        android:textAlignment="center"
+        android:text="@string/appInfo"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
 
-    <Button
-        android:id="@+id/appThree"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/appThree" />
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/main_toolbar"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textSize="28dp"
+        android:fontFamily="serif-monospace"
+        android:layout_alignParentEnd="true" />
 
-    <Button
-        android:id="@+id/appFour"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/appFour" />
-</LinearLayout>
+</RelativeLayout>
