--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,27 +15,35 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:textSize="24dp"
-        android:textAlignment="center"
-        android:text="@string/appInfo"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_below="@+id/main_toolbar"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="28dp"
-        android:fontFamily="serif-monospace"
-        android:layout_alignParentEnd="true" />
+        android:scrollbars="horizontal" android:id="@+id/ScrollView">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout1"
+            android:layout_height="fill_parent">
+
+            <TextView android:text="@string/app_name"
+                android:id="@+id/textView1"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_width="match_parent"
+                android:layout_height="60dip">
+            </TextView>
+
+            <TextView android:text="@string/appInfo"
+                android:id="@+id/textView2"
+                android:textSize="24dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="355dp">
+            </TextView>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
