--- a/app/src/main/res/layout/activity_lamp2.xml
+++ b/app/src/main/res/layout/activity_lamp2.xml
@@ -19,13 +19,13 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/tvImage"
+                android:id="@+id/lampsImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 app:srcCompat="@drawable/blind" />
 
             <TextView
-                android:id="@+id/tvText"
+                android:id="@+id/lampsText"
                 android:layout_width="match_parent"
                 android:layout_height="200px"
                 android:gravity="center_vertical"
@@ -33,22 +33,11 @@
                 android:textAlignment="center"
                 android:textSize="24dp" />
 
-
-            <EditText
-                android:id="@+id/channelTitle"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:ems="10"
-                android:hint="Enter Channel Name"
-                android:inputType="textPersonName"
-                android:text="" />
-
             <Button
-                android:id="@+id/addChannel"
+                android:id="@+id/switchLamp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Channel" />
-
+                android:text="TURN LAMP ON" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
