Added radio functionality Added CB radio functionality Added GPS functionality Fixed error where selecting new item crashes app

--- a/app/src/main/res/layout/auto_cb.xml
+++ b/app/src/main/res/layout/auto_cb.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Volume" />
+        android:text="@string/volume" />
 
     <SeekBar
         android:id="@+id/cbvolsb"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/cbvolsb"
-        android:text="Chanel" />
+        android:text="@string/channel" />
 
     <SeekBar
         android:id="@+id/cbchansb"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/cbchansb"
-        android:text="TextView" />
+        android:text="@string/gain" />
 
     <SeekBar
         android:id="@+id/cbgainsb"
@@ -87,5 +87,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="Delete CB Radio" />
+        android:text="@string/deletecb" />
 </RelativeLayout>
