--- a/app/src/main/res/layout/auto_temp_frag.xml
+++ b/app/src/main/res/layout/auto_temp_frag.xml
@@ -68,17 +68,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3"
-        android:layout_below="@+id/tvtemppre"
+        android:layout_alignBottom="@+id/buttemp1"
         android:layout_toStartOf="@+id/buttemp4" />
 
-    <TextView
-        android:id="@+id/tvtemppre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/pre"
-        android:layout_above="@+id/buttemp2"
-        android:layout_alignParentStart="true"
-        android:textAlignment="center"/>
 
     <Button
         android:id="@+id/buttemp4"
