--- a/app/src/main/res/layout/activity_garage.xml
+++ b/app/src/main/res/layout/activity_garage.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ScrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/main_toolbar"
+        android:scrollbars="horizontal">
 
-    <ImageView
-        android:id="@+id/garageImage"
-        android:layout_height="75dp"
-        android:layout_width="match_parent"
-        app:srcCompat="@drawable/blind" />
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/garageText"
-        android:layout_height="100dp"
-        android:layout_width="match_parent"
-        android:textAlignment="center"
-        android:gravity="center_vertical"
-        android:textSize="24dp"
-        android:text="TextView"/>
+            <ImageView
+                android:id="@+id/garageImage"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                app:srcCompat="@drawable/blind" />
+
+            <TextView
+                android:id="@+id/garageText"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:gravity="center_vertical"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="24dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
