--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -4,10 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sayadev.finalproject.livingroom.House">
+    android:orientation="vertical"
+    tools:context="com.sayadev.finalproject.House.House">
 
     <ListView
         android:id="@+id/houseItems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="460dp" />
+
+    <Button
+        android:id="@+id/addHouseItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Item" />
+
 </LinearLayout>
