--- a/app/src/main/res/layout/activity_temprature_inside.xml
+++ b/app/src/main/res/layout/activity_temprature_inside.xml
@@ -1,39 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ScrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/main_toolbar"
+        android:scrollbars="horizontal">
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/tempInImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:srcCompat="@drawable/blind" />
+
+            <TextView
+                android:id="@+id/tempInTitle"
+                android:layout_width="match_parent"
+                android:layout_height="200px"
+                android:gravity="center_vertical"
+                android:text="Temprature"
+                android:textAlignment="center"
+                android:textSize="24dp" />
 
 
-    <ImageView
-        android:id="@+id/tempInImage"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/blind" />
+            <EditText
+                android:id="@+id/tempInData"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:ems="10"
+                android:hint="Enter Temprature"
+                android:inputType="number"
+                android:text="" />
 
-    <TextView
-        android:id="@+id/tempInTitle"
-        android:layout_width="match_parent"
-        android:layout_height="200px"
-        android:gravity="center_vertical"
-        android:text="Temprature"
-        android:textAlignment="center"
-        android:textSize="24dp" />
+            <Button
+                android:id="@+id/addTemprature"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Temprature" />
 
-
-    <EditText
-        android:id="@+id/tempInData"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:ems="10"
-        android:hint="Enter Temprature"
-        android:inputType="number"
-        android:text="" />
-
-    <Button
-        android:id="@+id/addTemprature"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add Temprature" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
