--- a/app/src/main/res/layout/activity_temprature_outside.xml
+++ b/app/src/main/res/layout/activity_temprature_outside.xml
@@ -1,28 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ScrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/main_toolbar"
+        android:scrollbars="horizontal">
 
-    <ImageView
-        android:id="@+id/tempOutImage"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/blind" />
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/weatherImage"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                app:srcCompat="@mipmap/ic_launcher"
+                />
 
-    <TextView
-        android:id="@+id/tempOutTitle"
-        android:layout_width="match_parent"
-        android:layout_height="200px"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="24dp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/weatherImage">
+                <TextView
+                    android:id="@+id/currentTempLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Current Temperature"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="16dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"/>
 
+                <TextView
+                    android:id="@+id/minTempLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Maximum Temperature"
+                    android:layout_below="@+id/currentTempLabel"
+                    android:layout_alignStart="@+id/currentTempLabel"
+                    android:layout_marginTop="30dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"/>
 
+                <TextView
+                    android:id="@+id/maxTempLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Minimum Temperature"
+                    android:layout_below="@+id/minTempLabel"
+                    android:layout_alignStart="@+id/currentTempLabel"
+                    android:layout_marginTop="30dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"/>
 
+                <TextView
+                    android:id="@+id/currentTempText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="30dp" />
 
+                <TextView
+                    android:id="@+id/minTempText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"
+                    android:layout_alignBaseline="@+id/minTempLabel"
+                    android:layout_alignBottom="@+id/minTempLabel"
+                    android:layout_alignStart="@+id/currentTempText" />
+
+                <TextView
+                    android:id="@+id/maxTempText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textSize="18dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignStart="@+id/minTempText" />
+
+            </RelativeLayout>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
