--- a/app/src/main/res/layout/auto_temp_frag.xml
+++ b/app/src/main/res/layout/auto_temp_frag.xml
@@ -7,6 +7,48 @@
     tools:context="com.sayadev.finalproject.automobile.fragmentLayout">
 
 
+    <Button
+        android:id="@+id/tempsavebutt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/tempsavebutt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:layout_below="@+id/textView3"
+        android:layout_toEndOf="@+id/tempsavebutt1" />
+
+    <Button
+        android:id="@+id/tempsavebutt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:layout_alignBaseline="@+id/tempsavebutt2"
+        android:layout_alignBottom="@+id/tempsavebutt2"
+        android:layout_toStartOf="@+id/tempsavebutt4" />
+
+    <Button
+        android:id="@+id/tempsavebutt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:layout_alignBaseline="@+id/tempsavebutt3"
+        android:layout_alignBottom="@+id/tempsavebutt3"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttemp2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progsettext" />
+
     <TextView
         android:id="@+id/tvtemp"
         android:layout_width="wrap_content"
@@ -49,10 +91,10 @@
         android:id="@+id/buttemp1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:text="1"
+        android:layout_marginTop="36dp"
         android:layout_below="@+id/fanslider"
-        android:layout_marginTop="40dp"
-        android:text="1" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/buttemp2"
@@ -68,7 +110,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3"
-        android:layout_alignBottom="@+id/buttemp1"
+        android:layout_alignBaseline="@+id/buttemp4"
+        android:layout_alignBottom="@+id/buttemp4"
         android:layout_toStartOf="@+id/buttemp4" />
 
 
@@ -76,9 +119,9 @@
         android:id="@+id/buttemp4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/buttemp3"
-        android:layout_alignParentEnd="true"
-        android:text="4" />
+        android:text="4"
+        android:layout_below="@+id/tempprog"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/tempdelete"
@@ -87,5 +130,21 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="@string/deletetemp" />
+
+    <TextView
+        android:id="@+id/tempprog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttemp2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progtext" />
+
+    <TextView
+        android:id="@+id/tempprogset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttemp2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progsettext" />
 
 </RelativeLayout>
