--- a/app/src/main/res/layout/auto_radio.xml
+++ b/app/src/main/res/layout/auto_radio.xml
@@ -2,6 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/radsav1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/radsav2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:layout_alignBaseline="@+id/radsav1"
+        android:layout_alignBottom="@+id/radsav1"
+        android:layout_toEndOf="@+id/radsav1" />
+
+    <Button
+        android:id="@+id/radsav3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:layout_below="@+id/textView4"
+        android:layout_toStartOf="@+id/radsav4" />
+
+    <Button
+        android:id="@+id/radsav4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:layout_alignBaseline="@+id/radsav3"
+        android:layout_alignBottom="@+id/radsav3"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radset2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progsettext" />
+
     <TextView
         android:id="@+id/radvoltv"
         android:layout_width="wrap_content"
@@ -14,8 +56,8 @@
         android:id="@+id/radvolsb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/radvoltv" />
+        android:layout_below="@+id/radvoltv"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/radchantv"
@@ -45,9 +87,10 @@
         android:id="@+id/radset2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/radset1"
-        android:layout_toEndOf="@+id/radset1"
-        android:text="2" />
+        android:text="2"
+        android:layout_alignBaseline="@+id/radset1"
+        android:layout_alignBottom="@+id/radset1"
+        android:layout_toEndOf="@+id/radset1" />
 
     <Button
         android:id="@+id/radset4"
@@ -72,4 +115,20 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="@string/deleterad" />
+
+    <TextView
+        android:id="@+id/radprogtv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/radset2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progtext" />
+
+    <TextView
+        android:id="@+id/radprogsettv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radset2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progsettext" />
 </RelativeLayout>
