--- a/app/src/main/res/layout/auto_cb.xml
+++ b/app/src/main/res/layout/auto_cb.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/sbsave2"
+        android:id="@+id/cbsave2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2"
