finished lamp1,lamp2,lamp3

--- a/app/src/main/res/layout/activity_lamp1.xml
+++ b/app/src/main/res/layout/activity_lamp1.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/lampsImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:srcCompat="@drawable/blind" />
+                app:srcCompat="@drawable/light_off" />
 
             <TextView
                 android:id="@+id/lampsText"
