--- a/app/src/main/res/layout/activity_temprature_inside.xml
+++ b/app/src/main/res/layout/activity_temprature_inside.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,26 +11,22 @@
         android:layout_below="@+id/main_toolbar"
         android:scrollbars="horizontal">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/linearLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/tempInImage"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:srcCompat="@drawable/blind" />
 
             <TextView
                 android:id="@+id/tempInTitle"
                 android:layout_width="match_parent"
                 android:layout_height="200px"
                 android:gravity="center_vertical"
-                android:text="Temprature"
+                android:text=""
                 android:textAlignment="center"
-                android:textSize="24dp" />
+                android:textSize="14dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"/>
 
 
             <EditText
@@ -39,17 +34,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
                 android:ems="10"
-                android:hint="Enter Temprature"
+                android:hint="Enter Temperature"
                 android:inputType="number"
-                android:text="" />
+                android:text=""
+                android:layout_below="@+id/tempInTitle"/>
 
             <Button
-                android:id="@+id/addTemprature"
+                android:id="@+id/addTemperature"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Temprature" />
+                android:text="Set House Temperature"
+                android:layout_below="@id/tempInData"/>
 
-        </LinearLayout>
+                <ListView
+                    android:id="@+id/tempInSched"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_below="@+id/addTemperature"/>
+
+                <Button
+                    android:id="@+id/addTempInShed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@+id/tempInSched"
+                    android:text="Add Scheduale" />
+
+        </RelativeLayout>
     </ScrollView>
 
 </LinearLayout>
