--- a/app/src/main/res/layout/activity_garage.xml
+++ b/app/src/main/res/layout/activity_garage.xml
@@ -19,6 +19,12 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/lampImage"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                app:srcCompat="@drawable/lamp" />
+
+            <ImageView
                 android:id="@+id/garageImage"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
@@ -32,6 +38,18 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="24dp" />
+
+            <Button
+                android:id="@+id/openGarage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Open Garage"/>
+
+            <Button
+                android:id="@+id/openLamp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Turn ON Light"/>
 
         </LinearLayout>
     </ScrollView>
