--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -16,6 +16,6 @@
         android:id="@+id/addHouseItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Item" />
+        android:text="@string/add_item" />
 
 </LinearLayout>
