--- a/app/src/main/res/layout/activity_temprature_outside.xml
+++ b/app/src/main/res/layout/activity_temprature_outside.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/currentTempLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Current Temperature"
+                    android:text="@string/current_temp"
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="16dp"
                     android:textColor="#FFFFFF"
@@ -45,7 +45,7 @@
                     android:id="@+id/minTempLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Maximum Temperature"
+                    android:text="@string/max_temp"
                     android:layout_below="@+id/currentTempLabel"
                     android:layout_alignStart="@+id/currentTempLabel"
                     android:layout_marginTop="30dp"
@@ -56,7 +56,7 @@
                     android:id="@+id/maxTempLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Minimum Temperature"
+                    android:text="@string/min_temp"
                     android:layout_below="@+id/minTempLabel"
                     android:layout_alignStart="@+id/currentTempLabel"
                     android:layout_marginTop="30dp"
@@ -67,7 +67,7 @@
                     android:id="@+id/currentTempText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textColor="#FFFFFF"
                     android:textSize="18dp"
                     android:layout_alignParentTop="true"
@@ -78,7 +78,7 @@
                     android:id="@+id/minTempText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textColor="#FFFFFF"
                     android:textSize="18dp"
                     android:layout_alignBaseline="@+id/minTempLabel"
@@ -89,7 +89,7 @@
                     android:id="@+id/maxTempText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textSize="18dp"
                     android:textColor="#FFFFFF"
                     android:layout_alignParentBottom="true"
