--- a/app/src/main/res/layout-land/activity_house.xml
+++ b/app/src/main/res/layout-land/activity_house.xml
@@ -29,7 +29,7 @@
         android:id="@+id/addHouseItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Item"
+        android:text="@string/add_item"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/hosueFrame" />
