--- a/app/src/main/res/layout/activity_temprature_inside.xml
+++ b/app/src/main/res/layout/activity_temprature_inside.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
                 android:ems="10"
-                android:hint="Enter Temperature"
+                android:hint="@string/enter_tempin"
                 android:inputType="number"
                 android:text=""
                 android:layout_below="@+id/tempInTitle"/>
@@ -43,7 +43,7 @@
                 android:id="@+id/addTemperature"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Set House Temperature"
+                android:text="@string/set_house_tempin"
                 android:layout_below="@id/tempInData"/>
 
                 <ListView
@@ -59,7 +59,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentBottom="true"
                     android:layout_below="@+id/tempInSched"
-                    android:text="Add Scheduale" />
+                    android:text="@string/add_schedule" />
 
         </RelativeLayout>
     </ScrollView>
