--- a/app/src/main/res/layout/house_list_row.xml
+++ b/app/src/main/res/layout/house_list_row.xml
@@ -18,7 +18,7 @@
         android:textAlignment="center"
         android:gravity="center_vertical"
         android:textSize="24dp"
-        android:text="TextView"/>
+        android:text=""/>
 
 
 </LinearLayout>
