--- a/app/src/main/res/layout/dialog_add_tv_channel.xml
+++ b/app/src/main/res/layout/dialog_add_tv_channel.xml
@@ -9,7 +9,7 @@
         android:id="@+id/select_tv_channel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Channel Number"
+        android:hint="@string/room_tv_channel_number"
         android:inputType="number" />
 
 </LinearLayout>
