--- a/app/src/main/res/layout/room_items.xml
+++ b/app/src/main/res/layout/room_items.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/roomItemImage"
         android:gravity="center_vertical"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="center"
         android:textSize="24dp" />
 
