--- a/app/src/main/res/values/strings_room.xml
+++ b/app/src/main/res/values/strings_room.xml
@@ -1,5 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Blinding -->
+    <string name="blind_level_is">Blinds Level is</string>
+    <string name="blind_is_closed">Blinds is Closed</string>
+    <string name="blind_dialog_ok">OK</string>
+    <string name="blind_dialog_cancel">Cancel</string>
+    <string name="blind_change_lamp_color">Change Lamp Color</string>
+
+    <!-- lamps -->
+    <string name="room_switch_lamp_on">SWITCH LAMP ON</string>
+    <string name="room_switch_lamp_off">SWITCH LAMP OFF</string>
+    <string name="room_lamp_turned_on">You turned the light ON</string>
+    <string name="room_lamp_turned_off">You turned the light OFF</string>
+
+    <!-- lamps - color picker library by Simone Pessotto (GitHub) -->
+    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
+    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
+    <string name="materialcolorpicker__inputColor">Color: </string>
+    <string name="materialcolorpicker__btnSelectColor">Select</string>
+    <string name="materialcolorpicker__hash" translatable="false">#</string>
+
+    <!-- TV -->
+    <string name="turn_tv_on">TURN TV ON</string>
+    <string name="turn_tv_off">TURN TV OFF</string>
+    <string name="room_tv_volume">Volume</string>
+    <string name="room_tv_playing_channel">Playing Channel</string>
+    <string name="room_tv_channel_error">Channel can\'t be less than 0 or larger than 10</string>
+    <string name="room_tv_no_channel_error">Channel can\'t be empty</string>
+    <string name="room_tv_channel_number">Channel Number</string>
+
+    <!-- house -->
+    <string name="living_room">Living Room</string>
+
     <string name="dialog_room_device_type">Device Type:</string>
     <string name="dialog_room_device_tv">TV</string>
     <string name="dialog_room_device_lamp1">Lamp 1</string>
@@ -12,6 +44,12 @@
     <string name="dialog_room_device_lamp2_desc">Lamp 2 Interface - User can turn on / off the lamp. User can change the brightness of a lamp.</string>
     <string name="dialog_room_device_lamp3_desc">Lamp 3 Interface - User can turn on / off the lamp. User can change the brightness of a lamp. User can change color of a lamp.</string>
     <string name="dialog_room_device_blinding_desc">Blinds Interface - User can open or close blinds using a slider.</string>
+
+    <string name="room_delete_device">Delete Device</string>
+    <string name="room_about_device">About Device</string>
+    <string name="room_add_device">Add Device</string>
+    <string name="room_item_added">Item was added successfully</string>
+    <string name="room_item_deleted">Item was deleted successfully</string>
 
     <string-array name="rooms_array">
         <item>TV</item>
